Add Kraken liquidate-losers endpoint and UI button
Features:
- POST /api/kraken/liquidate-losers: Sells only losing positions
- UI: Red 'Sell Losers' button in KrakenWidget
- Preserves profitable positions (green P&L)
- Uses tracked entry prices from KrakenTradingLoop

Also updated:
- README: Removed outdated Rust/Cloudflare references
- README: Updated architecture to reflect actual deployment
- README: Added accurate API endpoint documentation